# el-waiter

./: .env.example  .gitignore  DEVLOG.md  HANDOFF-NATIVE-BUILD.md  HANDOFF-NEXT-SESSION.md  HANDOFF-PRICELIST-ARCHITECTURE.md  LICENSE  capacitor.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-elwaiter.yml
android/: capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  capacitor.build.gradle
capacitor-shell/: index.html
e2e/: smoke.spec.ts
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/: manifest.json  sw.js
scripts/: build-cap.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: cors.ts
src/app/order/: page.tsx
src/app/pay/: page.tsx
src/app/pay/callback/: page.tsx
src/app/settings/: page.tsx
src/app/tables/: page.tsx
src/app/wallet/: page.tsx
src/components/: BottomNav.tsx  ConnectivityMonitor.tsx  DbInitializer.tsx  EqualSplitPicker.tsx  ErrorBoundary.tsx  ItemSplitPicker.tsx  KdsListener.tsx  PinchZoomContainer.tsx  PushNotificationHandler.tsx  QRScanner.tsx  ServiceWorkerRegistrar.tsx  SplitModeSelector.tsx  ThemeApplicator.tsx
src/hooks/: useVenueId.ts
src/lib/: apiBase.ts  dbTypes.ts  debugLog.ts  dexieDb.ts  fcm.ts  guntherPrint.ts  nativePrinter.ts  push.ts  pushNotifications.ts  sqliteDb.ts  supabase.ts  syncEngine.ts  venueConfig.ts  waiterDb.ts
src/store/: waiterStore.ts
(+20 files in other folders)
